corrected alignment navbar

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light {
    align-items: center;
    justify-content: flex-start;
    flex-wrap: nowrap;
+   height: 90px;
+   
+}
+
+.navbar-brand, .nav-link {
+   align-self: center;
 }
 
 .primary-cta-button {
@@ -56,6 +62,6 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light {
    transition: color 0.3s ease;
 
    &:hover {
-       color: #ff9f00;  
+       color: #fac762;  
    }
 }
